--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -1,4 +1,4 @@
-name: generate-snake-game-from-github-contribution-grid
+name: snake-on-contribution-graph
 
 on:
   schedule: # execute every 12 hours
@@ -7,11 +7,11 @@ on:
 
 jobs:
   build:
-    name: updates my-github-contribution-grid
+    name: Jobs to update my contribution graph
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Platane/snk@v2.0.0-rc.2
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: iamwatchdogs
