--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -14,9 +14,9 @@ jobs:
     
       - uses: actions/checkout@v2
       
-      - name: generate-snake-game-from-github-contribution-grid
+      - name: generate snake game
         id: generate-snake
-        uses: Platane/snk@master
+        uses: Platane/snk@v2
         with:
           github_user_name: iamwatchdogs
           outputs: |
