--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -1,6 +1,9 @@
 name: snake-on-contribution-graph
 
 on:
+  push:
+    branches: 
+      main
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
