--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -36,9 +36,9 @@ jobs:
 #          test -f dist/github-contribution-grid-snake.gif
 
       - name: Using GitHub Pages to deploy
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
           target_branch: output
-#         build_dir: dist
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
