--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -2,8 +2,8 @@ name: snake-on-contribution-graph
 
 on:
   push:
-    branches: 
-      main
+    paths:
+      - '**.yml'
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
   workflow_dispatch:
