--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -15,16 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-      - uses: actions/checkout@v2
+      - name: checking out the repo
+        uses: actions/checkout@v2
              
-      - name: generate snake game
-        id: generate-snake
-        uses: Platane/snk@v2.2.1
+      - name: generating snake
+        uses: Sutil/snk@master
+        id: snake-gif
         with:
-          github_user_name: iamwatchdogs
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: dist/github-contribution-grid-snake-blue.svg
+          snake_color: 'blue'
        
       - name: ensure the generated file exists
         run: |
