--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -19,21 +19,21 @@ jobs:
         uses: actions/checkout@v2
              
       - name: generating snake
-        uses: Sutil/snk@v01.00.02
+        uses: Platane/snk@v2.2.1
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake-blue.svg
-          snake_color: 'blue'
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
        
       - name: ensure the generated file exists
         run: |
           ls dist
-          test -f dist/github-contribution-grid-snake-blue.svg
-          # not checking the following as I'm using "Sutil/snk@master" instead of "Platane/snk@v2.2.1"
-          # test -f dist/github-contribution-grid-snake.svg
-          # test -f dist/github-contribution-grid-snake-dark.svg
-          # test -f dist/github-contribution-grid-snake.gif
+          test -f dist/github-contribution-grid-snake.svg
+          test -f dist/github-contribution-grid-snake-dark.svg
+          test -f dist/github-contribution-grid-snake.gif
           
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
