--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -24,17 +24,16 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dark.svg?palette=github-dark&color_snake=blue
-            light.svg?color_snake=#7845ab
-            ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
        
       - name: ensure the generated file exists
         run: |
           ls dist
-          ls -a
-          # test -f dist/github-contribution-grid-snake.svg
-          # test -f dist/github-contribution-grid-snake-dark.svg
-          # test -f dist/github-contribution-grid-snake.gif
+          test -f dist/github-contribution-grid-snake.svg
+          test -f dist/github-contribution-grid-snake-dark.svg
+          test -f dist/github-contribution-grid-snake.gif
           
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
