--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -19,14 +19,15 @@ jobs:
         uses: actions/checkout@v2
              
       - name: generating snake
-        uses: Platane/snk@v2.2.1
-        id: snake-gif
+        uses: Platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            github_user_name: ${{ github.repository_owner }}
+            outputs: |
+              dist/github-snake.svg
+              dist/github-snake-dark.svg?palette=github-dark
+              dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        
       - name: ensure the generated file exists
         run: |
