--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
              
       - name: generating snake
-        uses: Platane/snk@v3
+        uses: Platane/snk@v3.0.0
         with:
             github_user_name: ${{ github.repository_owner }}
             outputs: |
@@ -31,10 +31,11 @@ jobs:
        
       - name: ensure the generated file exists
         run: |
-          ls dist
-          test -f dist/github-contribution-grid-snake.svg
-          test -f dist/github-contribution-grid-snake-dark.svg
-          test -f dist/github-contribution-grid-snake.gif
+          ls -a
+          # ls dist
+          # test -f dist/github-contribution-grid-snake.svg
+          # test -f dist/github-contribution-grid-snake-dark.svg
+          # test -f dist/github-contribution-grid-snake.gif
           
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
