--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -32,6 +32,8 @@ jobs:
       - name: ensure the generated file exists
         run: |
           ls -a
+          cd dist
+          ls -a
           # ls dist
           # test -f dist/github-contribution-grid-snake.svg
           # test -f dist/github-contribution-grid-snake-dark.svg
