--- a/.github/workflows/snake-on-contribution-graph.yml
+++ b/.github/workflows/snake-on-contribution-graph.yml
@@ -31,17 +31,14 @@ jobs:
        
       - name: ensure the generated file exists
         run: |
-          ls -a
-          cd dist
-          ls -a
-          # ls dist
-          # test -f dist/github-contribution-grid-snake.svg
-          # test -f dist/github-contribution-grid-snake-dark.svg
-          # test -f dist/github-contribution-grid-snake.gif
+          ls dist
+          test -f dist/github-snake.svg
+          test -f dist/github-snake-dark.svg
+          test -f dist/ocean.gif
           
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
